test: simplified WpfTestApp

--- a/tests/apps/WpfTestApp/Pages/Buttons/ButtonsPageView.xaml
+++ b/tests/apps/WpfTestApp/Pages/Buttons/ButtonsPageView.xaml
@@ -4,48 +4,70 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-
              x:Name="ButtonsPage"
              AutomationProperties.AutomationId="ButtonsPage">
-    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-                  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+    <ScrollViewer HorizontalScrollBarVisibility="Auto"
+            VerticalScrollBarVisibility="Auto"
+                  HorizontalContentAlignment="Stretch"
+            VerticalContentAlignment="Stretch">
         <Grid Margin="12">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <GroupBox Grid.Row="0" Header="Simple Button">
+            <GroupBox Grid.Row="0"
+                    Header="Simple Button">
                 <StackPanel Orientation="Horizontal">
-                    <Button Content="Do Something" x:Name="DoSomething" Margin="3" Width="Auto" MinWidth="90"
-                            HorizontalAlignment="Center" />
-                    <Button Content="Do Something Other" x:Name="DoSomethingOther" Margin="3" Width="Auto"
+                    <Button Content="Do Something"
+                            x:Name="DoSomething"
+                            Margin="3"
+                            Width="Auto"
                             MinWidth="90"
-                            HorizontalAlignment="Center" />
+                            HorizontalAlignment="Center"/>
+                    <Button Content="Do Something Other"
+                            x:Name="DoSomethingOther"
+                            Margin="3"
+                            Width="Auto"
+                            MinWidth="90"
+                            HorizontalAlignment="Center"/>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Grid.Row="1" Header="CheckBox">
+            <GroupBox Grid.Row="1"
+                    Header="CheckBox">
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox x:Name="CanDoSomething" Content="Do Something Enabled" />
+                    <CheckBox x:Name="CanDoSomething"
+                            Content="Do Something Enabled"/>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Grid.Row="2" Header="ToggleButton">
+            <GroupBox Grid.Row="2"
+                    Header="ToggleButton">
                 <StackPanel Orientation="Horizontal">
-                    <ToggleButton x:Name="CanDoSomethingOther" Content="Toggle Me" />
+                    <ToggleButton x:Name="CanDoSomethingOther"
+                            Content="Toggle Me"/>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Grid.Row="3" Header="RadioButtons">
+            <GroupBox Grid.Row="3"
+                    Header="RadioButtons">
                 <StackPanel Orientation="Vertical">
-                    <RadioButton x:Name="IsOption1" GroupName="Options" Content="Option 1" />
-                    <RadioButton x:Name="IsOption2" GroupName="Options" Content="Option 2" />
-                    <RadioButton x:Name="IsOption3" GroupName="Options" Content="Option 3" />
+                    <RadioButton x:Name="IsOption1"
+                            GroupName="Options"
+                            Content="Option 1"/>
+                    <RadioButton x:Name="IsOption2"
+                            GroupName="Options"
+                            Content="Option 2"/>
+                    <RadioButton x:Name="IsOption3"
+                            GroupName="Options"
+                            Content="Option 3"/>
 
-                    <TextBox x:Name="SelectedOption" IsReadOnly="True" />
+                    <TextBox x:Name="SelectedOption"
+                            IsReadOnly="True"/>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Grid.Row="4" Header="Dialog Buttons">
+            <GroupBox Grid.Row="4"
+                    Header="Dialog Buttons">
                 <StackPanel Orientation="Vertical">
                     <Button x:Name="OpenFolder">Open Folder</Button>
                     <Button x:Name="OpenFolderNew">Open Folder New</Button>
