--- a/tests/apps/WpfTestApp/Pages/DataGrids/DataGridsPageView.xaml
+++ b/tests/apps/WpfTestApp/Pages/DataGrids/DataGridsPageView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WpfTestApp.Pages.DataGrids.DataGridsPageView"
+<UserControl x:Class="WpfTestApp.Pages.DataGrids.DataGridsPageView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,105 +7,130 @@
              xmlns:core="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:WpfTestApp.Pages.DataGrids"
              mc:Ignorable="d"
-
              x:Name="DataGridsPage"
              AutomationProperties.AutomationId="DataGridsPage">
 
     <UserControl.Resources>
-        <ObjectDataProvider x:Key="DataEnumValues" MethodName="GetValues"
+        <ObjectDataProvider x:Key="DataEnumValues"
+                MethodName="GetValues"
                             ObjectType="{x:Type core:Enum}">
             <ObjectDataProvider.MethodParameters>
-                <x:Type Type="local:DataEnum" />
+                <x:Type Type="local:DataEnum"/>
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </UserControl.Resources>
-    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-                  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+    <ScrollViewer HorizontalScrollBarVisibility="Auto"
+            VerticalScrollBarVisibility="Auto"
+                  HorizontalContentAlignment="Stretch"
+            VerticalContentAlignment="Stretch">
         <Grid Margin="12">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="200" />
-                <RowDefinition Height="200" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="200"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <GroupBox Header="Simple DataGrid" Grid.Row="0">
-                <StackPanel Orientation="Horizontal" Margin="3">
-                    <DataGrid x:Name="DataItems" Margin="3" VerticalContentAlignment="Center"
+            <GroupBox Header="Simple DataGrid"
+                    Grid.Row="0">
+                <StackPanel Orientation="Horizontal"
+                        Margin="3">
+                    <DataGrid x:Name="DataItems"
+                            Margin="3"
+                            VerticalContentAlignment="Center"
                               AutoGenerateColumns="False"
-                              HeadersVisibility="All" SelectionMode="Extended" SelectionUnit="FullRow">
+                              HeadersVisibility="All"
+                            SelectionMode="Extended"
+                            SelectionUnit="FullRow">
 
                         <DataGrid.RowHeaderTemplate>
                             <DataTemplate>
-                                <TextBlock MinWidth="25" />
+                                <TextBlock MinWidth="25"/>
                             </DataTemplate>
                         </DataGrid.RowHeaderTemplate>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding FirstName}" Header="First Name"
-                                                AutomationProperties.AutomationId="FirstName" />
-                            <DataGridTextColumn Binding="{Binding SureName}" Header="Sure Name"
-                                                AutomationProperties.AutomationId="SureName" />
-                            <DataGridTextColumn Binding="{Binding BirthDay}" Header="Birthday"
-                                                AutomationProperties.AutomationId="BirthDay" />
-                            <DataGridCheckBoxColumn Binding="{Binding Enabled}" Header="Enabled"
-                                                    AutomationProperties.AutomationId="Enabled" />
+                            <DataGridTextColumn Binding="{Binding FirstName}"
+                                    Header="First Name"
+                                                AutomationProperties.AutomationId="FirstName"/>
+                            <DataGridTextColumn Binding="{Binding SureName}"
+                                    Header="Sure Name"
+                                                AutomationProperties.AutomationId="SureName"/>
+                            <DataGridTextColumn Binding="{Binding BirthDay}"
+                                    Header="Birthday"
+                                                AutomationProperties.AutomationId="BirthDay"/>
+                            <DataGridCheckBoxColumn Binding="{Binding Enabled}"
+                                    Header="Enabled"
+                                                    AutomationProperties.AutomationId="Enabled"/>
                             <DataGridComboBoxColumn SelectedItemBinding="{Binding DataEnum}"
                                                     ItemsSource="{Binding Source={StaticResource DataEnumValues}}"
                                                     Header="DataEnum"
-                                                    AutomationProperties.AutomationId="DataEnum" />
+                                                    AutomationProperties.AutomationId="DataEnum"/>
 
                         </DataGrid.Columns>
                         <DataGrid.ColumnHeaderStyle>
                             <Style TargetType="DataGridColumnHeader">
                                 <Setter Property="AutomationProperties.AutomationId"
-                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}" />
+                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}"/>
                             </Style>
                         </DataGrid.ColumnHeaderStyle>
                         <DataGrid.CellStyle>
                             <Style TargetType="DataGridCell">
                                 <Setter Property="AutomationProperties.AutomationId"
-                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}" />
+                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}"/>
                             </Style>
                         </DataGrid.CellStyle>
                     </DataGrid>
                 </StackPanel>
             </GroupBox>
-            <GroupBox Header="CellOrRowHeader Selectable DataGrid" Grid.Row="1">
-                <StackPanel Orientation="Horizontal" Margin="3">
-                    <DataGrid x:Name="CellOrRowHeaderSelectableDataItems" Margin="3" VerticalContentAlignment="Center"
+            <GroupBox Header="CellOrRowHeader Selectable DataGrid"
+                    Grid.Row="1">
+                <StackPanel Orientation="Horizontal"
+                        Margin="3">
+                    <DataGrid x:Name="CellOrRowHeaderSelectableDataItems"
+                            Margin="3"
+                            VerticalContentAlignment="Center"
                               AutoGenerateColumns="False"
-                              HeadersVisibility="All" SelectionMode="Extended" SelectionUnit="CellOrRowHeader">
+                              HeadersVisibility="All"
+                            SelectionMode="Extended"
+                            SelectionUnit="CellOrRowHeader">
 
                         <DataGrid.RowHeaderTemplate>
                             <DataTemplate>
-                                <TextBlock MinWidth="25" />
+                                <TextBlock MinWidth="25"/>
                             </DataTemplate>
                         </DataGrid.RowHeaderTemplate>
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding FirstName}" Header="First Name"
-                                                AutomationProperties.AutomationId="FirstName" />
-                            <DataGridTextColumn Binding="{Binding SureName}" Header="Sure Name"
-                                                AutomationProperties.AutomationId="SureName" />
-                            <DataGridTextColumn Binding="{Binding BirthDay}" Header="Birthday"
-                                                AutomationProperties.AutomationId="BirthDay" />
-                            <DataGridCheckBoxColumn Binding="{Binding Enabled}" Header="Enabled"
-                                                    AutomationProperties.AutomationId="Enabled" />
+                            <DataGridTextColumn Binding="{Binding FirstName}"
+                                    Header="First Name"
+                                                AutomationProperties.AutomationId="FirstName"/>
+                            <DataGridTextColumn Binding="{Binding SureName}"
+                                    Header="Sure Name"
+                                                AutomationProperties.AutomationId="SureName"/>
+                            <DataGridTextColumn Binding="{Binding BirthDay}"
+                                    Header="Birthday"
+                                                AutomationProperties.AutomationId="BirthDay"/>
+                            <DataGridCheckBoxColumn Binding="{Binding Enabled}"
+                                    Header="Enabled"
+                                                    AutomationProperties.AutomationId="Enabled"/>
                             <DataGridComboBoxColumn SelectedItemBinding="{Binding DataEnum}"
                                                     ItemsSource="{Binding Source={StaticResource DataEnumValues}}"
                                                     Header="Data Enum"
-                                                    AutomationProperties.AutomationId="DataEnum" />
+                                                    AutomationProperties.AutomationId="DataEnum"/>
 
                         </DataGrid.Columns>
                         <DataGrid.ColumnHeaderStyle>
                             <Style TargetType="DataGridColumnHeader">
                                 <Setter Property="AutomationProperties.AutomationId"
-                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}" />
+                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}"/>
                             </Style>
                         </DataGrid.ColumnHeaderStyle>
                         <DataGrid.CellStyle>
                             <Style TargetType="DataGridCell">
                                 <Setter Property="AutomationProperties.AutomationId"
-                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}" />
+                                        Value="{Binding Path=Column.(AutomationProperties.AutomationId), RelativeSource={RelativeSource Self}}"/>
                             </Style>
                         </DataGrid.CellStyle>
                     </DataGrid>
