--- a/tests/apps/WpfTestApp/Pages/Edits/EditsPageView.xaml
+++ b/tests/apps/WpfTestApp/Pages/Edits/EditsPageView.xaml
@@ -4,25 +4,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-
              x:Name="EditsPage"
              AutomationProperties.AutomationId="EditsPage">
 
     <Grid Margin="12">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <GroupBox Header="Simple TextBox" Grid.Row="0">
-            <StackPanel Orientation="Horizontal" Margin="3">
-                <TextBox x:Name="SimpleTextBox" Text="simple text" Margin="3" VerticalContentAlignment="Center"
-                         Width="150" />
+        <GroupBox Header="Simple TextBox"
+                Grid.Row="0">
+            <StackPanel Orientation="Horizontal"
+                    Margin="3">
+                <TextBox x:Name="SimpleTextBox"
+                        Text="simple text"
+                        Margin="3"
+                        VerticalContentAlignment="Center"
+                         Width="150"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox Header="Multiline TextBox" Grid.Row="1">
-            <StackPanel Orientation="Horizontal" Margin="3">
+        <GroupBox Header="Multiline TextBox"
+                Grid.Row="1">
+            <StackPanel Orientation="Horizontal"
+                    Margin="3">
                 <TextBox x:Name="MultiLineTextBox"
                          Text="a multiline text"
                          Margin="3"
@@ -31,19 +37,31 @@
                          TextWrapping="Wrap"
                          AcceptsReturn="True"
                          HorizontalScrollBarVisibility="Auto"
-                         VerticalScrollBarVisibility="Auto" />
+                         VerticalScrollBarVisibility="Auto"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox Header="Disabled TextBox" Grid.Row="2">
-            <StackPanel Orientation="Horizontal" Margin="3">
-                <TextBox x:Name="DisabledTextBox" Text="disabled text" Margin="3" VerticalContentAlignment="Center"
-                         Width="150" IsEnabled="False" />
+        <GroupBox Header="Disabled TextBox"
+                Grid.Row="2">
+            <StackPanel Orientation="Horizontal"
+                    Margin="3">
+                <TextBox x:Name="DisabledTextBox"
+                        Text="disabled text"
+                        Margin="3"
+                        VerticalContentAlignment="Center"
+                         Width="150"
+                        IsEnabled="False"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox Header="Readonly TextBox" Grid.Row="3">
-            <StackPanel Orientation="Horizontal" Margin="3">
-                <TextBox x:Name="ReadonlyTextBox" Text="disabled text" Margin="3" VerticalContentAlignment="Center"
-                         Width="150" IsReadOnly="True" />
+        <GroupBox Header="Readonly TextBox"
+                Grid.Row="3">
+            <StackPanel Orientation="Horizontal"
+                    Margin="3">
+                <TextBox x:Name="ReadonlyTextBox"
+                        Text="disabled text"
+                        Margin="3"
+                        VerticalContentAlignment="Center"
+                         Width="150"
+                        IsReadOnly="True"/>
             </StackPanel>
         </GroupBox>
     </Grid>
