--- a/tests/apps/WpfTestApp/Pages/Texts/TextsPageView.xaml
+++ b/tests/apps/WpfTestApp/Pages/Texts/TextsPageView.xaml
@@ -4,17 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignHeight="300"
+        d:DesignWidth="300"
              x:Name="ButtonsPage"
              AutomationProperties.AutomationId="TextsPage">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="0" Header="Some Text Blocks">
+        <GroupBox Grid.Row="0"
+                Header="Some Text Blocks">
             <GroupBox x:Name="SomeTextBoxes">
                 <StackPanel x:Name="Panel">
                     <TextBlock>General</TextBlock>
