--- a/tests/apps/WpfTestApp/Pages/Trees/TreesPageView.xaml
+++ b/tests/apps/WpfTestApp/Pages/Trees/TreesPageView.xaml
@@ -4,28 +4,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+        d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TreeView x:Name="TheTreeView" Grid.Column="0" Margin="6">
-            <TreeViewItem Header="1. Level 1" IsExpanded="True">
-                <TreeViewItem Header="Level 2.1" />
-                <TreeViewItem Header="Level 2.2" IsExpanded="True">
-                    <TreeViewItem Header="Level 3.1" />
-                    <TreeViewItem Header="Level 3.2" />
+        <TreeView x:Name="TheTreeView"
+                Grid.Column="0"
+                Margin="6">
+            <TreeViewItem Header="1. Level 1"
+                    IsExpanded="True">
+                <TreeViewItem Header="Level 2.1"/>
+                <TreeViewItem Header="Level 2.2"
+                        IsExpanded="True">
+                    <TreeViewItem Header="Level 3.1"/>
+                    <TreeViewItem Header="Level 3.2"/>
                 </TreeViewItem>
-                <TreeViewItem Header="Level 2.3" />
+                <TreeViewItem Header="Level 2.3"/>
             </TreeViewItem>
-            <TreeViewItem Header="2. Level 1" IsExpanded="False">
-                <TreeViewItem Header="Level 2.1" />
-                <TreeViewItem Header="Level 2.2" IsExpanded="True">
-                    <TreeViewItem Header="Level 3.1" />
-                    <TreeViewItem Header="Level 3.2" />
-                    <TextBox Text="Level 3.3" />
+            <TreeViewItem Header="2. Level 1"
+                    IsExpanded="False">
+                <TreeViewItem Header="Level 2.1"/>
+                <TreeViewItem Header="Level 2.2"
+                        IsExpanded="True">
+                    <TreeViewItem Header="Level 3.1"/>
+                    <TreeViewItem Header="Level 3.2"/>
+                    <TextBox Text="Level 3.3"/>
                 </TreeViewItem>
-                <TreeViewItem Header="Level 2.3" />
+                <TreeViewItem Header="Level 2.3"/>
             </TreeViewItem>
         </TreeView>
 
